[project]
name = "hass-databricks"
version = "1.0.0"
description = ""
readme = "README.md"
requires-python = ">=3.14.2,<4.0"
authors = [ { name = "Peter Kaszt", email = "kasztp@gmail.com" } ]
dependencies = []

[project.optional-dependencies]
test = [
	"pytest>=8.3.3",
	"pylint>=3.3.1",
	"pytest-cov>=6.0.0",
	"homeassistant>=2024.1.0",
	"uv>=0.11.6",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["custom_components*"]

[tool.ruff]
extend-exclude = ["notebooks/*.ipynb"]

[tool.uv]
override-dependencies = [
    "pillow>=12.2.0",
    "pyjwt>=2.12.0",
    "orjson>=3.11.0",
]

[tool.pytest.ini_options]
testpaths = ["tests/custom_components"]
norecursedirs = ["tests/core", "tests/utils"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
